Cropped favicon size and fixed a bug where navbar would appear briefly when loading

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ header {
     }
 
     #navbar{
+        display: none;
         list-style-type: none;
     
         a {
